--- a/_config.yml
+++ b/_config.yml
@@ -94,7 +94,8 @@ facebook_id: # your facebook id
 discord_id: # your discord id (18-digit unique numerical identifier)
 
 contact_note: >
-  You can even add a little note about which of these is the best way to reach you.
+  Happy to talk about collaborations, PhD openings, and my work. Best reached on my
+  email.
 
 # -----------------------------------------------------------------------------
 # Analytics and search engine verification
