--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -26,51 +26,37 @@
       year: 208
       description:
         - Worked on xyz
-
     - title: THAI RS Research
-      institution: Kaiser Wilhelm Institute for Physics, Berlin, Germany.
-      year: 1917-1933
+      institution: University Of Toronto, Canada
+      year: 2022
 
-    - title: Professor of Theoretical Physics
-      institution: Karl-Ferdinand University, Prague, Czechoslovakia
-      year: 1911 - 1917
-      description:
-
-    - title: Associate Professor of Theoretical Physics
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1909 - 1911
 
 - title: Open Source Projects
   type: time_table
   contents:
-    - title: <a href="https://github.com/alshedivat/al-folio">al-folio</a>
-      year: 2015-now
-      description: A beautiful, simple, clean, and responsive Jekyll theme for academics.
+    - title: <a href="https://github.com/py-why/dowhy">DoWhy (Contributor)</a>
+      year: 2019
+      description: Worked with Amit Sharma to add capabilities to Microsoft's DoWhy library for causal inference.
 
 - title: Honors and Awards
   type: time_table
   contents:
-    - year: 1921
+    - year: 2021
       items: 
-        - Nobel Prize in Physics 
-        - Matteucci Medal
-    - year: 2029
-      items: 
-        - Max Planck Medal
+        - Institute Merit Scholar: Recipient of the merit scholarship in the form of a waiver of 40% of the tuition fees, awarded to top 2% students of the Institute for 6 consecutive semesters.
 
 - title: Academic Interests
   type: nested_list
   contents:
-    - title: Topic 1.
+    - title: Human Computer Interaction
       items: 
-        - Description 1.
-        - Description 2.
-    - title: Topic 2.
+        - Evaluating algorithmic tooling
+        - Studying Social Media and Misinformation
+    - title: Causal Inference
       items:
-        - Description 1.
-        - Description 2.
+        - Evaluating causal inference methods 
 
 - title: Other Interests
   type: list
   contents:
-    - <u>Hobbies:</u> Hobby 1, Hobby 2, etc.
+    - <u>Hobbies:</u> Reading books, running, poetry
